--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   
-  <h1 id="output"></h1>
+  <h1>La tua password è:</h1>
+
+  <div id="output"></div>
 
   <script src="js/script.js"></script>
 </body>
