--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <h1>La tua password è:</h1>
 
-  <div id="output"></div>
+  <h3 id="output"></h3>
 
   <script src="js/script.js"></script>
 </body>
